crates/memscribe-testkit/tests/snapshots/nodes__gemini__v1__ban.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "a1b2c3d4-0003",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Important policy: we will never add a dependency on left-pad. Use the std library instead.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "Use",
        "offset": 62
      },
      {
        "rule_id": "ban.negated_use",
        "category": "ban",
        "matched_text": "never add",
        "offset": 26
      },
      {
        "rule_id": "imperative.must_always_never",
        "category": "imperative",
        "matched_text": "never",
        "offset": 26
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/gemini/v1/ban.jsonl",
        "byte_offset": 150,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Use the std library instead.",
    "considered_options": [
      {
        "text": "the",
        "chosen": true
      }
    ],
    "is_ban": true,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  }
]
