crates/memscribe-testkit/tests/snapshots/nodes__gemini__v1__happy_path_decision_then_edits.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "a1b2c3d4-0001",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use Postgres instead of MySQL for the orders service. Update the config and the migration runner.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 19
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/gemini/v1/happy_path_decision_then_edits.jsonl",
        "byte_offset": 185,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use Postgres instead of MySQL for the orders service.",
    "considered_options": [
      {
        "text": "MySQL",
        "chosen": false
      },
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T10:00:00Z"
  },
  {
    "node": "episode",
    "path": "config/database.toml",
    "diff": {
      "path": "config/database.toml",
      "old": "[db]\ndriver = \"mysql\"\nurl = \"mysql://localhost:3306/orders\"\n",
      "new": "[db]\ndriver = \"postgres\"\nurl = \"postgres://localhost:5432/orders\"\n",
      "unified": "@@ -1,3 +1,3 @@\n [db]\n-driver = \"mysql\"\n-url = \"mysql://localhost:3306/orders\"\n+driver = \"postgres\"\n+url = \"postgres://localhost:5432/orders\"\n",
      "added_lines": 2,
      "removed_lines": 2
    },
    "git": {
      "sha": "9f1c0aa2b3",
      "branch": "main"
    },
    "episode_id": "b78ab9a156d7d598f3543b766cf27bca39c9fd43bf73511518bcd4e57f2429a0"
  },
  {
    "node": "episode",
    "path": "src/migrate.rs",
    "diff": {
      "path": "src/migrate.rs",
      "old": "use mysql::Pool;\n",
      "new": "use postgres::Client;\n",
      "unified": "@@ -1 +1 @@\n-use mysql::Pool;\n+use postgres::Client;\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "9f1c0aa2b3",
      "branch": "main"
    },
    "episode_id": "9e53e5876500176fb220e30f1475ff32c5e3c551142ca14e0bc990ae1db855d6"
  },
  {
    "node": "binding",
    "from": "decision:a1b2c3d4-0001:1",
    "to": "episode:9e53e5876500176fb220e30f1475ff32c5e3c551142ca14e0bc990ae1db855d6",
    "relation": "produced",
    "prov": {
      "used_session": "a1b2c3d4-0001",
      "used_decision": "decision:a1b2c3d4-0001:1",
      "was_generated_by_session": "a1b2c3d4-0001",
      "t_use": "2026-06-22T10:00:00Z",
      "t_gen": "2026-06-22T10:00:03.12Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:a1b2c3d4-0001:1",
    "to": "episode:b78ab9a156d7d598f3543b766cf27bca39c9fd43bf73511518bcd4e57f2429a0",
    "relation": "produced",
    "prov": {
      "used_session": "a1b2c3d4-0001",
      "used_decision": "decision:a1b2c3d4-0001:1",
      "was_generated_by_session": "a1b2c3d4-0001",
      "t_use": "2026-06-22T10:00:00Z",
      "t_gen": "2026-06-22T10:00:03.12Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
