crates/memscribe-testkit/tests/snapshots/nodes__gemini__v1__interleaved_arcs.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "g-interleaved-0001",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use Postgres for the orders store. Update the connection module and the schema.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/gemini/v1/interleaved_arcs.jsonl",
        "byte_offset": 194,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use Postgres for the orders store.",
    "considered_options": [
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T09:00:00Z"
  },
  {
    "node": "episode",
    "path": "src/db.rs",
    "diff": {
      "path": "src/db.rs",
      "old": "use mysql::Pool;\n",
      "new": "use postgres::Client;\n",
      "unified": "@@ -1 +1 @@\n-use mysql::Pool;\n+use postgres::Client;\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "931069dd1718c8c61609b0e97b3f3eaf3441e987f38b65ed9aacf96e2a9bf5e6"
  },
  {
    "node": "episode",
    "path": "src/schema.rs",
    "diff": {
      "path": "src/schema.rs",
      "old": "-- mysql schema\n",
      "new": "-- postgres schema\n",
      "unified": "@@ -1 +1 @@\n--- mysql schema\n+-- postgres schema\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "6a95432062f10904dce08fbfbf6c5f709a5084bcd3b43b6c1302889b08678b52"
  },
  {
    "node": "conversation",
    "session_id": "g-interleaved-0001",
    "turn_range": {
      "start": 9,
      "end": 10
    },
    "text": "Now switch to a bounded connection pool in the same db module instead of a single client.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "switch to",
        "offset": 4
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 62
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/gemini/v1/interleaved_arcs.jsonl",
        "byte_offset": 1194,
        "line_no": 4
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Now switch to a bounded connection pool in the same db module instead of a single client.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 9,
      "end": 10
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T09:05:00Z"
  },
  {
    "node": "episode",
    "path": "src/db.rs",
    "diff": {
      "path": "src/db.rs",
      "old": "use postgres::Client;\n",
      "new": "use deadpool_postgres::Pool;\n",
      "unified": "@@ -1 +1 @@\n-use postgres::Client;\n+use deadpool_postgres::Pool;\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "83fc8ad09cfae229f6e8ddf1429a02ee6d14cf50c9ab015f639e97b9718750c8"
  },
  {
    "node": "episode",
    "path": "src/pool.rs",
    "diff": {
      "path": "src/pool.rs",
      "old": null,
      "new": "pub struct PoolCfg { pub max: usize }\n",
      "unified": "@@ -0,0 +1 @@\n+pub struct PoolCfg { pub max: usize }\n",
      "added_lines": 1,
      "removed_lines": 0
    },
    "git": {
      "sha": "a1a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "a628c0fb5fc9081b6d99e8cc6f7ea896565d08a8d43e5dec50d85fb2d04fffe0"
  },
  {
    "node": "binding",
    "from": "decision:g-interleaved-0001:1",
    "to": "episode:6a95432062f10904dce08fbfbf6c5f709a5084bcd3b43b6c1302889b08678b52",
    "relation": "produced",
    "prov": {
      "used_session": "g-interleaved-0001",
      "used_decision": "decision:g-interleaved-0001:1",
      "was_generated_by_session": "g-interleaved-0001",
      "t_use": "2026-06-22T09:00:00Z",
      "t_gen": "2026-06-22T09:00:02Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 2.0,
      "phi": 0.57735,
      "p": 0.248213
    }
  },
  {
    "node": "binding",
    "from": "decision:g-interleaved-0001:1",
    "to": "episode:931069dd1718c8c61609b0e97b3f3eaf3441e987f38b65ed9aacf96e2a9bf5e6",
    "relation": "produced",
    "prov": {
      "used_session": "g-interleaved-0001",
      "used_decision": "decision:g-interleaved-0001:1",
      "was_generated_by_session": "g-interleaved-0001",
      "t_use": "2026-06-22T09:00:00Z",
      "t_gen": "2026-06-22T09:00:02Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:g-interleaved-0001:9",
    "to": "episode:83fc8ad09cfae229f6e8ddf1429a02ee6d14cf50c9ab015f639e97b9718750c8",
    "relation": "produced",
    "prov": {
      "used_session": "g-interleaved-0001",
      "used_decision": "decision:g-interleaved-0001:9",
      "was_generated_by_session": "g-interleaved-0001",
      "t_use": "2026-06-22T09:05:00Z",
      "t_gen": "2026-06-22T09:05:02Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:g-interleaved-0001:9",
    "to": "episode:a628c0fb5fc9081b6d99e8cc6f7ea896565d08a8d43e5dec50d85fb2d04fffe0",
    "relation": "produced",
    "prov": {
      "used_session": "g-interleaved-0001",
      "used_decision": "decision:g-interleaved-0001:9",
      "was_generated_by_session": "g-interleaved-0001",
      "t_use": "2026-06-22T09:05:00Z",
      "t_gen": "2026-06-22T09:05:02Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 2.0,
      "phi": 0.57735,
      "p": 0.248213
    }
  }
]
