crates/memscribe-testkit/tests/snapshots/nodes__gemini__v1__multi_edit_single_commit.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "g-multiedit-0001",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "We will use Argon2 for password hashing across the auth service. Update the hasher, the verifier, and the config in one pass.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 8
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/gemini/v1/multi_edit_single_commit.jsonl",
        "byte_offset": 195,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "We will use Argon2 for password hashing across the auth service.",
    "considered_options": [
      {
        "text": "Argon2",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/auth/hasher.rs",
    "diff": {
      "path": "src/auth/hasher.rs",
      "old": "use bcrypt::hash;\n",
      "new": "use argon2::Argon2;\n",
      "unified": "@@ -1 +1 @@\n-use bcrypt::hash;\n+use argon2::Argon2;\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "b2b2b2b2b2",
      "branch": "feat/argon2"
    },
    "episode_id": "15e4b7e951721a92cc59d23457313e646aeff9b452ffea3aec88aaa4f6b72809"
  },
  {
    "node": "episode",
    "path": "src/auth/verifier.rs",
    "diff": {
      "path": "src/auth/verifier.rs",
      "old": "use bcrypt::verify;\n",
      "new": "use argon2::PasswordVerifier;\n",
      "unified": "@@ -1 +1 @@\n-use bcrypt::verify;\n+use argon2::PasswordVerifier;\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "b2b2b2b2b2",
      "branch": "feat/argon2"
    },
    "episode_id": "f0315f623442fdb8c58ee4f260bb0f4c476e97c2100ba80cf94f84be1f1ae075"
  },
  {
    "node": "episode",
    "path": "config/auth.toml",
    "diff": {
      "path": "config/auth.toml",
      "old": "hash = \"bcrypt\"\n",
      "new": "hash = \"argon2\"\n",
      "unified": "@@ -1 +1 @@\n-hash = \"bcrypt\"\n+hash = \"argon2\"\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "b2b2b2b2b2",
      "branch": "feat/argon2"
    },
    "episode_id": "c6341552eebb634b23180453678bcf136c6e35e1e7f8b5552dc8c83bd837a01f"
  },
  {
    "node": "binding",
    "from": "decision:g-multiedit-0001:1",
    "to": "episode:15e4b7e951721a92cc59d23457313e646aeff9b452ffea3aec88aaa4f6b72809",
    "relation": "produced",
    "prov": {
      "used_session": "g-multiedit-0001",
      "used_decision": "decision:g-multiedit-0001:1",
      "was_generated_by_session": "g-multiedit-0001",
      "t_use": "2026-06-22T14:00:00Z",
      "t_gen": "2026-06-22T14:00:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:g-multiedit-0001:1",
    "to": "episode:c6341552eebb634b23180453678bcf136c6e35e1e7f8b5552dc8c83bd837a01f",
    "relation": "produced",
    "prov": {
      "used_session": "g-multiedit-0001",
      "used_decision": "decision:g-multiedit-0001:1",
      "was_generated_by_session": "g-multiedit-0001",
      "t_use": "2026-06-22T14:00:00Z",
      "t_gen": "2026-06-22T14:00:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:g-multiedit-0001:1",
    "to": "episode:f0315f623442fdb8c58ee4f260bb0f4c476e97c2100ba80cf94f84be1f1ae075",
    "relation": "produced",
    "prov": {
      "used_session": "g-multiedit-0001",
      "used_decision": "decision:g-multiedit-0001:1",
      "was_generated_by_session": "g-multiedit-0001",
      "t_use": "2026-06-22T14:00:00Z",
      "t_gen": "2026-06-22T14:00:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
