crates/memscribe-testkit/tests/snapshots/nodes__gemini__v1__subagent_thread.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "g-subagent-0001",
    "turn_range": {
      "start": 3,
      "end": 4
    },
    "text": "In this sub-thread, use a streaming pull-parser for the ingest format instead of the buffered one.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 20
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 70
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/gemini/v1/subagent_thread.jsonl",
        "byte_offset": 668,
        "line_no": 4
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "In this sub-thread, use a streaming pull-parser for the ingest format instead of the buffered one.",
    "considered_options": [
      {
        "text": "the",
        "chosen": false
      },
      {
        "text": "a",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 3,
      "end": 4
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/ingest/parser.rs",
    "diff": {
      "path": "src/ingest/parser.rs",
      "old": "let buf = read_all(input);\n",
      "new": "let mut reader = PullParser::new(input);\n",
      "unified": "@@ -1 +1 @@\n-let buf = read_all(input);\n+let mut reader = PullParser::new(input);\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "d4d4d4d4d4",
      "branch": "main"
    },
    "episode_id": "88bee143d2c0e8e6adae2c7ec82782a1b5152fac140c379654ef4de9afec9dd0"
  },
  {
    "node": "binding",
    "from": "decision:g-subagent-0001:3",
    "to": "episode:88bee143d2c0e8e6adae2c7ec82782a1b5152fac140c379654ef4de9afec9dd0",
    "relation": "produced",
    "prov": {
      "used_session": "g-subagent-0001",
      "used_decision": "decision:g-subagent-0001:3",
      "was_generated_by_session": "g-subagent-0001",
      "t_use": "2026-06-22T16:01:00Z",
      "t_gen": "2026-06-22T16:01:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
